# ESP32-S3-RLCD-Monitor

./: .gitignore  README.en.md  README.md  README.zh.md
bridge/: README.md  bridge.py  pyproject.toml  schema.py
bridge/sources/: claude_limits.py  claude_local.py  opencode.py  weather.py
docs/: ui-mockup.txt
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/app_bsp/: lvgl_bsp.cpp  lvgl_bsp.h
firmware/components/net_app/: CMakeLists.txt  wifi_app.c
firmware/components/sensor/: shtc3.c
firmware/components/ui_app/: CMakeLists.txt  font_amt14.c  font_cn_14.c  font_cn_20.c  font_test.c  icon_bat_chg.c  icon_bat_full.c  icon_bat_low.c  icon_bat_med.c  icon_wifi.c  icon_wifi_low.c  icon_wifi_off.c  icons.c  icons.h  ui_app.cpp  ui_app.h
firmware/components/usage_client/: CMakeLists.txt  usage_client.c  usage_client.h
firmware/components/user_app/: CMakeLists.txt  user_app.cpp  user_app.h
firmware/main/: CMakeLists.txt  app_main.c  main.cpp  secrets.h.example
firmware/main/drv/: buttons.c  buttons.h  display.c  display.h
firmware/main/net/: usage_client.c  usage_client.h  wifi.c  wifi.h
firmware/main/ui/: ui_main.c  ui_main.h  ui_styles.c
scripts/: append_icons.py  copy_xiaozhi_icons.py  gen_icons.py  install-bridge-linux.sh  rlcd-zt-fix.service  start_bridge.bat  start_bridge.vbs  vps-zt-mtu-fix.sh
