[project]
name = "rlcd-bridge"
version = "0.1.0"
description = "Bridge daemon that exposes Claude usage stats from local ccusage output as HTTP JSON for the RLCD device."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.6",
]

[project.scripts]
rlcd-bridge = "bridge:main"

[tool.uv]
package = false
